--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ p
 }
 
 /* Classes */
-.benefits 
+aside
 {
     margin-right: 20px;
     padding: 20px;
@@ -90,25 +90,19 @@ p
     background-color: #2589bd;
 }
 
-.benefit-brand,
-.benefit-cost,
-.benefit-lead 
+aside div 
 {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand h3,
-.benefit-cost h3,
-.benefit-lead h3 
+aside h3 
 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand img,
-.benefit-cost img,
-.benefit-lead img 
+aside img 
 {
     display: block;
     margin: 10px auto;
@@ -165,4 +159,3 @@ p
     float: left;
     margin-right: 25px;
 }
-
