--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ aside {
     width: 20%;
 }
 
-aside div {
+aside section {
     color: #ffffff;
     margin-bottom: 32px;
 }
@@ -53,7 +53,7 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 10px;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
 }
     
@@ -98,11 +98,11 @@ main {
     width: 75%;
 }
 
-main div {
+main section {
     background-color: #0072bb;
     color: #ffffff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 300px;
+    height: 317px;
     margin-bottom: 20px; 
     padding: 50px;
 }
@@ -120,23 +120,24 @@ p {
 /* Classes */
 
 .hero {
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-position: center;
     background-size: cover;
     height: 800px;
     margin-bottom: 25px;
     width: 100%;
+    clear: both;
 }
 
-.online-reputation-management img {
-    float: right;
-    margin-left: 25px;
+.services img {
+    margin-right: 25px; 
     max-height: 200px;
 }
 
-.search-engine-optimization img,
-.social-media-marketing img {
+.float-left {
     float: left;
-    margin-right: 25px;
-    max-height: 200px;
+}   
+
+.float-right {
+    float: right;
 }
+
